# ocr-bridge

./: .gitignore  README.md
ocrbridge/: .dockerignore  .gitignore  pyproject.toml  requirements.txt
ocrbridge/api/: main.py
ocrbridge/config/: __init__.py  logging_config.py  settings.py
ocrbridge/dashboard/: app.py
ocrbridge/docker/: Dockerfile  docker-compose.yml
ocrbridge/src/channels/: __init__.py  base.py
ocrbridge/src/channels/telegram/: __init__.py  bot.py  handler.py
ocrbridge/src/channels/whatsapp/: handler.py
ocrbridge/src/core/: __init__.py  enums.py  exceptions.py  models.py
ocrbridge/src/export/: __init__.py  base.py  excel_provider.py  sheets_provider.py
ocrbridge/src/interfaces/: __init__.py  channel_handler.py  document_processor.py  export_provider.py  receipt_parser.py  vlm_provider.py
ocrbridge/src/parchi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ocrbridge/src/payments/: __init__.py  razorpay_provider.py
ocrbridge/src/processing/: __init__.py  document_processor.py
ocrbridge/src/processing/parsers/: __init__.py  base.py  standard_parser.py
ocrbridge/src/processing/vlm/: __init__.py  base.py  gemini_provider.py  qwen_provider.py
ocrbridge/src/services/: __init__.py  payment_service.py  receipt_processing_service.py  validation_service.py
ocrbridge/src/storage/: __init__.py  database.py  models.py  repository.py
