[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OCRBridge"
version = "0.1.0"
description = "AI-powered receipt processing for Indian logistics"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.3.0",
    "python-telegram-bot>=20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "streamlit>=1.28.0",
    "psycopg2-binary>=2.9.9",
]